--- a/src/BlazorPatient/Pages/MudPatient.razor
+++ b/src/BlazorPatient/Pages/MudPatient.razor
@@ -1,15 +1,23 @@
 ﻿@page "/Patient"
 @using BlazorPatient.DTO
 @inject Infrastructure.Services.IPatientService PatientService
+@inject Infrastructure.Services.INoteService NoteService
 @inject ISnackbar SnackBar
 
-@if (_patients is null)
+@if (_patients.Count is 0)
 {
-    <MudProgressCircular Color="Color.Default" Indeterminate="true" />
+    <MudCard Elevation="25">
+        <MudCardHeader>
+            <CardHeaderContent>
+                <MudText Variant="Variant.Text" Typo="Typo.h6">No patient found.</MudText>
+                <MudProgressCircular Color="Color.Default" Indeterminate="true" />
+            </CardHeaderContent>
+        </MudCardHeader>
+    </MudCard>
 }
 else
 {
-    <MudTable Elevation="25" Items="_patients" Filter="new Func<PatientDto, bool>(Search)" @bind-patient="_patient" Dense="true" Hover="true" Striped="true">
+    <MudTable Elevation="25" Items="_patients" Filter="new Func<PatientDto, bool>(SearchPatient)" @bind-patient="_patient" Dense="true" Hover="true" Striped="true">
         <ToolBarContent>
             <MudText Typo="Typo.h6">Patient</MudText>
             <MudToolBarSpacer />
@@ -39,7 +47,7 @@ else
             <MudTd DataLabel="HomeAddress">@context.HomeAddress</MudTd>
             <MudTd DataLabel="PhoneNumber">@context.PhoneNumber</MudTd>
             <MudTd DataLabel="">
-                <MudFab @onclick="@(()=>Edit(@context.Id))" Color="Color.Primary" Icon="@Icons.Material.Filled.Edit" Size="Size.Small" IconSize="Size.Small" />
+                <MudFab @onclick="@(()=>EditPatient(@context.Id))" Color="Color.Primary" Icon="@Icons.Material.Filled.Edit" Size="Size.Small" IconSize="Size.Small" />
             </MudTd>
         </RowTemplate>
     </MudTable>
@@ -56,7 +64,6 @@ else
             <MudTextField @bind-Value="_patient.FamilyName" Label="Family Name" Variant="Variant.Text" Margin="Margin.Normal"></MudTextField>
             <MudDatePicker @bind-Date="_patient.DateOfBirth"
                            Color="Color.Warning"
-                           HelperText="Helper Text Example"
                            Label="Date Of Birth"
                            MinDate="DateTime.Now.Subtract(new TimeSpan(876600,0,0))"
                            PickerVariant="PickerVariant.Dialog"
@@ -64,13 +71,74 @@ else
             <MudSelect @bind-Value="_patient.Gender" Label="Gender" Variant="Variant.Text" Margin="Margin.Normal">
                 @foreach (Gender item in Enum.GetValues(typeof(Gender)))
                     {
-                    <MudSelectItem T="Gender?" Value="@item">@item</MudSelectItem>
+                        <MudSelectItem T="Gender?" Value="@item"/>
                     }
             </MudSelect>
-            <MudTextField @bind-Value="_patient.HomeAddress" Label="Home Address" Variant="Variant.Text" Margin="Margin.Normal"></MudTextField>
-            <MudTextField @bind-Value="_patient.PhoneNumber" Label="Phone Number" Variant="Variant.Text" Margin="Margin.Normal"></MudTextField>
+            <MudTextField @bind-Value="_patient.HomeAddress" Label="Home Address" Variant="Variant.Text" Margin="Margin.Normal"/>
+            <MudTextField @bind-Value="_patient.PhoneNumber" Label="Phone Number" Variant="Variant.Text" Margin="Margin.Normal"/>
             <br />
-            <MudButton Variant="Variant.Filled" Color="Color.Success" OnClick="Save">Save Patient</MudButton>
+            <MudButton Variant="Variant.Filled" Color="Color.Success" OnClick="SavePatient">Save Patient</MudButton>
+        </MudCardContent>
+    </MudCard>
+}
+<br />
+@if (_notes.Count is 0)
+{
+    <MudCard Elevation="25">
+        <MudCardHeader>
+            <CardHeaderContent>
+                <MudText Variant="Variant.Text" Typo="Typo.h6">No patient notes/history found.</MudText>
+            </CardHeaderContent>
+        </MudCardHeader>
+    </MudCard>
+}
+else
+{
+    <MudTable Elevation="25" Items="_notes" Filter="new Func<NoteDto, bool>(SearchNote)" @bind-note="_note" Dense="true" Hover="true" Striped="true">
+        <ToolBarContent>
+            <MudText Typo="Typo.h6">Note</MudText>
+            <MudToolBarSpacer />
+            <MudTextField @bind-Value="searchString"
+                           Adornment="Adornment.Start"
+                           AdornmentIcon="@Icons.Material.Filled.Search"
+                           IconSize="Size.Medium" Class="mt-0">
+                Placeholder="Search for notes..."
+            </MudTextField>
+        </ToolBarContent>
+        <HeaderContent>
+            <MudTh>Id</MudTh>
+            <MudTh>PatientId</MudTh>
+            <MudTh>Message</MudTh>
+            <MudTh>Created Time</MudTh>
+        </HeaderContent>
+        <RowTemplate>
+            <MudTd DataLabel="Id">@context.Id</MudTd>
+            <MudTd DataLabel="PatientId">@context.PatientId</MudTd>
+            <MudTd DataLabel="Message">@context.Message</MudTd>
+            <MudTd DataLabel="CreatedTime">@context.CreatedTime</MudTd>
+            <MudTd DataLabel="">
+                <MudFab @onclick="@(()=>EditNote(@context.Id))" Color="Color.Primary" Icon="@Icons.Material.Filled.Edit" Size="Size.Small" IconSize="Size.Small" />
+            </MudTd>
+        </RowTemplate>
+    </MudTable>
+    <br />
+    <MudCard Elevation="25">
+        <MudCardHeader>
+            <CardHeaderContent>
+                <MudText Typo="Typo.h6">Add / Edit Note</MudText>
+            </CardHeaderContent>
+        </MudCardHeader>
+        <MudCardContent>
+            <MudTextField @bind-Value="_note.Id" Label="Id" Variant="Variant.Text" Margin="Margin.Normal" Disabled="true"/>
+             <MudSelect @bind-Value="_note.PatientId" Label="Patient Id" Variant="Variant.Text" Margin="Margin.Normal">
+                @foreach (var item in _patients)
+                    {
+                    <MudSelectItem T="int" Value="@item.Id" />
+                    }
+            </MudSelect>
+            <MudTextField @bind-Value="_note.Message" Label="Message" Margin="Margin.Normal" Variant="Variant.Text"/>
+            <br />
+            <MudButton Color="Color.Success" OnClick="SaveNote" Variant="Variant.Filled">Save Note</MudButton>
         </MudCardContent>
     </MudCard>
 }
@@ -78,13 +146,16 @@ else
 @code{
     private string searchString = "";
     private PatientDto _patient = new();
+    private NoteDto _note = new();
     private List<PatientDto> _patients = new();
+    private List<NoteDto> _notes = new();
     protected override async Task OnInitializedAsync()
     {
         _patients = await PatientService.Get();
+        _notes = await NoteService.Get();
     }
 
-    private bool Search(PatientDto patientParam)
+    private bool SearchPatient(PatientDto patientParam)
     {
         if (string.IsNullOrWhiteSpace(searchString)) return true;
         return patientParam.GivenName.Contains(searchString, StringComparison.OrdinalIgnoreCase)
@@ -92,12 +163,25 @@ else
                || patientParam.PhoneNumber.Contains(searchString, StringComparison.OrdinalIgnoreCase);
     }
 
-    private async Task GetPatientDto()
+    private bool SearchNote(NoteDto noteDto)
+    {
+        if (string.IsNullOrWhiteSpace(searchString)) return true;
+        return noteDto.Id.Contains(searchString, StringComparison.OrdinalIgnoreCase)
+               || noteDto.PatientId.Equals(int.Parse(searchString))
+               || noteDto.Message.Contains(searchString, StringComparison.OrdinalIgnoreCase);
+    }
+
+    private async Task GetPatients()
     {
         _patients = await PatientService.Get();
     }
 
-    private async Task Save()
+    private async Task GetNotes()
+    {
+        _notes = await NoteService.Get();
+    }
+
+    private async Task SavePatient()
     {
         int result = await PatientService.Save(_patient);
         var cachePatient = _patient;
@@ -115,11 +199,37 @@ else
                 SnackBar.Add("Patient Updated.", Severity.Success);
                 break;
         }
-        await GetPatientDto();
+        await GetPatients();
     }
 
-    private void Edit(int id)
+    private async Task SaveNote()
+    {
+        int result = await NoteService.Save(_note);
+        var cacheNote = _note;
+        _note = new NoteDto();
+        switch (result)
+        {
+            case 0:
+                SnackBar.Add("Something went wrong.", Severity.Error);
+                _note = cacheNote;
+                break;
+            case 1:
+                SnackBar.Add("Note Saved.", Severity.Success);
+                break;
+            case 2:
+                SnackBar.Add("Note Updated.", Severity.Success);
+                break;
+        }
+        await GetNotes();
+    }
+
+    private void EditPatient(int id)
     {
         _patient = _patients.FirstOrDefault(p => p.Id == id);
+    }
+
+    private void EditNote(string id)
+    {
+        _note = _notes.FirstOrDefault(p => p.Id == id);
     }
 }
