--- a/src/BlazorPatient/wwwroot/css/site.css
+++ b/src/BlazorPatient/wwwroot/css/site.css
@@ -1,22 +1,29 @@
+/*#region General*/
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
-a, .btn-link {
-    color: #0366d6;
+.mainContent {
+    padding: 85px;
 }
 
-.btn-primary {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+.alert {
+    font-size: 16px;
 }
 
-.content {
-    padding-top: 1.1rem;
+a {
+    color: var(--mud-palette-text-primary);
+    text-decoration: none !important;
 }
+
+.alert:hover a{
+    color: #27272f;
+    font-weight: 900;
+}
+/*#endregion*/
 
 .valid.modified:not([type=checkbox]) {
     outline: 1px solid #26b050;
@@ -42,9 +49,70 @@ a, .btn-link {
     z-index: 1000;
 }
 
-    #blazor-error-ui .dismiss {
-        cursor: pointer;
-        position: absolute;
-        right: 0.75rem;
-        top: 0.5rem;
+#blazor-error-ui .dismiss {
+    cursor: pointer;
+    position: absolute;
+    right: 0.75rem;
+    top: 0.5rem;
+}
+
+/*#region NavMenu*/
+
+.oi {
+    width: 2rem;
+    font-size: 1.1rem;
+    vertical-align: text-top;
+    top: -2px;
+}
+
+.nav-item {
+    font-size: 0.9rem;
+    padding-bottom: 0.5rem;
+}
+
+.nav-item:first-of-type {
+    padding-top: 1rem;
+}
+
+.nav-item:last-of-type {
+    padding-bottom: 1rem;
+}
+
+.nav-item a {
+    border-radius: 4px;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    line-height: 3rem;
+}
+
+    .nav-item a.active {
+        background-color: var(--mud-palette-drawer-text);
     }
+
+    .nav-item a:hover {
+        background-color: var(--mud-palette-drawer-text);
+        color: var(--mud-palette-text-secondary);
+    }
+
+@media (min-width: 641px) {
+    .navbar-toggler {
+        display: none;
+    }
+
+    .collapse {
+        /* Never collapse the sidebar for wide screens */
+        display: block;
+    }
+}
+/*#endregion*/
+
+/* #region Reconnect modal text & link*/
+#components-reconnect-modal {
+    color: black;
+}
+
+#components-reconnect-modal a{
+    color: red;
+}
+/* #endregion */
