--- a/src/BlazorPatient/Pages/MudPatient.razor
+++ b/src/BlazorPatient/Pages/MudPatient.razor
@@ -1,8 +1,8 @@
-﻿@page "/Patient"
+﻿@page "/Patients"
 @using BlazorPatient.DTO
 @inject Infrastructure.Services.IPatientService PatientService
-@inject Infrastructure.Services.INoteService NoteService
 @inject ISnackbar SnackBar
+@inject NavigationManager NavigationManager
 
 @if (_patients.Count is 0)
 {
@@ -16,15 +16,15 @@
 }
 else
 {
-    <MudTable Elevation="25" Items="_patients" Filter="new Func<PatientDto, bool>(SearchPatient)" @bind-patient="_patient" Dense="true" Hover="true" Striped="true">
+    <MudTable T="PatientDto" Elevation="25" Items="_patients" Filter="new Func<PatientDto, bool>(SearchPatient)" @bind-patient="_patient" Dense="true" Hover="true" Striped="true" OnRowClick="@(args => OnRowClicked(args))">
         <ToolBarContent>
             <MudText Typo="Typo.h6">Patient</MudText>
             <MudToolBarSpacer />
             <MudTextField @bind-Value="searchString"
                           Adornment="Adornment.Start"
                           AdornmentIcon="@Icons.Material.Filled.Search"
+                          Placeholder="Search for Patient..."
                           IconSize="Size.Medium" Class="mt-0">
-                Placeholder="Search for Patient..."
             </MudTextField>
         </ToolBarContent>
         <HeaderContent>
@@ -59,14 +59,14 @@ else
         </CardHeaderContent>
     </MudCardHeader>
     <MudCardContent>
-        <MudTextField @bind-Value="_patient.Id" Label="Id" Variant="Variant.Text" Margin="Margin.Normal" Disabled="true"></MudTextField>
+        <MudTextField @bind-Value="_patient.Id" Label="Id" Variant="Variant.Text" Margin="Margin.Normal" Disabled="true" />
         <MudTextField @bind-Value="_patient.GivenName" Label="Given Name" Variant="Variant.Text" Margin="Margin.Normal"></MudTextField>
         <MudTextField @bind-Value="_patient.FamilyName" Label="Family Name" Variant="Variant.Text" Margin="Margin.Normal"></MudTextField>
         <MudDatePicker @bind-Date="_patient.DateOfBirth"
-                       Color="Color.Warning"
+                       Color="Color.Info"
+                       DisableToolbar="true"
                        Label="Date Of Birth"
                        MinDate="DateTime.Now.Subtract(new TimeSpan(876600,0,0))"
-                       PickerVariant="PickerVariant.Dialog"
                        TitleDateFormat="dd MMM" />
         <MudSelect @bind-Value="_patient.Gender" Label="Gender" Variant="Variant.Text" Margin="Margin.Normal">
             @foreach (Gender item in Enum.GetValues(typeof(Gender)))
@@ -80,84 +80,15 @@ else
         <MudButton Variant="Variant.Filled" Color="Color.Info" OnClick="SavePatient">Save Patient</MudButton>
     </MudCardContent>
 </MudCard>
-<br />
-@if (_notes.Count is 0)
-{
-    <MudCard Elevation="25">
-        <MudCardHeader>
-            <CardHeaderContent>
-                <MudText Variant="Variant.Text" Typo="Typo.h6">No patient notes/history found.</MudText>
-            </CardHeaderContent>
-        </MudCardHeader>
-    </MudCard>
-}
-else
-{
-    <MudTable Elevation="25" Items="_notes" Filter="new Func<NoteDto, bool>(SearchNote)" @bind-note="_note" Dense="true" Hover="true" Striped="true">
-        <ToolBarContent>
-            <MudText Typo="Typo.h6">Note</MudText>
-            <MudToolBarSpacer />
-            <MudTextField @bind-Value="searchString"
-                          Adornment="Adornment.Start"
-                          AdornmentIcon="@Icons.Material.Filled.Search"
-                          IconSize="Size.Medium" Class="mt-0">
-                Placeholder="Search for notes..."
-            </MudTextField>
-        </ToolBarContent>
-        <HeaderContent>
-            <MudTh>Id</MudTh>
-            <MudTh>PatientId</MudTh>
-            <MudTh>Message</MudTh>
-            <MudTh>Created Time</MudTh>
-        </HeaderContent>
-        <RowTemplate>
-            <MudTd DataLabel="Id">@context.Id</MudTd>
-            <MudTd DataLabel="PatientId">@context.PatientId</MudTd>
-            <MudTd DataLabel="Message">@context.Message</MudTd>
-            <MudTd DataLabel="CreatedTime">@context.CreatedTime</MudTd>
-            <MudTd DataLabel="">
-                <MudFab @onclick="@(()=>EditNote(@context.Id))" Color="Color.Primary" Icon="@Icons.Material.Filled.Edit" Size="Size.Small" IconSize="Size.Small" />
-            </MudTd>
-        </RowTemplate>
-    </MudTable>
-}
-<br />
-<MudCard Elevation="25">
-    <MudCardHeader>
-        <CardHeaderContent>
-            <MudText Typo="Typo.h6">Add / Edit Note</MudText>
-        </CardHeaderContent>
-    </MudCardHeader>
-    <MudCardContent>
-        <MudTextField @bind-Value="_note.Id" Label="@selectLabel" Variant="Variant.Text" Margin="Margin.Normal" Disabled="true" />
-        <MudSelect @bind-Value="_note.PatientId" Label="@selectLabel" Variant="Variant.Text" Margin="Margin.Normal">
-            @foreach (var item in _patients)
-            {
-                <MudSelectItem T="int" Value="@item.Id" @onmouseover="ChangeSelectLabel" />
-            }
-        </MudSelect>
-        <MudTextField @bind-Value="_note.Message" Label="Message" Margin="Margin.Normal" Variant="Variant.Text" />
-        <br />
-        <MudButton Color="Color.Info" OnClick="SaveNote" Variant="Variant.Filled">Save Note</MudButton>
-    </MudCardContent>
-</MudCard>
 
 @code{
     private string searchString = "";
-    private string selectLabel;
     private PatientDto _patient = new();
-    private NoteDto _note = new();
     private List<PatientDto> _patients = new();
-    private List<NoteDto> _notes = new();
+
     protected override async Task OnInitializedAsync()
     {
         _patients = await PatientService.Get();
-        _notes = await NoteService.Get();
-    }
-
-    private void ChangeSelectLabel(MouseEventArgs e)
-    {
-        selectLabel = $"Mouse coordinates: {e.ScreenX}:{e.ScreenY}";
     }
 
     private bool SearchPatient(PatientDto patientParam)
@@ -167,25 +98,10 @@ else
                || patientParam.FamilyName.Contains(searchString, StringComparison.OrdinalIgnoreCase)
                || patientParam.PhoneNumber.Contains(searchString, StringComparison.OrdinalIgnoreCase);
     }
-
-    private bool SearchNote(NoteDto noteDto)
-    {
-        if (string.IsNullOrWhiteSpace(searchString)) return true;
-        return noteDto.Id.Contains(searchString, StringComparison.OrdinalIgnoreCase)
-               || noteDto.PatientId.Equals(int.Parse(searchString))
-               || noteDto.Message.Contains(searchString, StringComparison.OrdinalIgnoreCase);
-    }
-
     private async Task GetPatients()
     {
         _patients = await PatientService.Get();
     }
-
-    private async Task GetNotes()
-    {
-        _notes = await NoteService.Get();
-    }
-
     private async Task SavePatient()
     {
         int result = await PatientService.Save(_patient);
@@ -207,34 +123,13 @@ else
         await GetPatients();
     }
 
-    private async Task SaveNote()
-    {
-        int result = await NoteService.Save(_note);
-        var cacheNote = _note;
-        _note = new NoteDto();
-        switch (result)
-        {
-            case 0:
-                SnackBar.Add("Something went wrong.", Severity.Error);
-                _note = cacheNote;
-                break;
-            case 1:
-                SnackBar.Add("Note Saved.", Severity.Success);
-                break;
-            case 2:
-                SnackBar.Add("Note Updated.", Severity.Success);
-                break;
-        }
-        await GetNotes();
-    }
-
     private void EditPatient(int id)
     {
         _patient = _patients.FirstOrDefault(p => p.Id == id);
     }
 
-    private void EditNote(string id)
+    private void OnRowClicked(TableRowClickEventArgs<PatientDto> args)
     {
-        _note = _notes.FirstOrDefault(p => p.Id == id);
+        NavigationManager.NavigateTo($"/Patients/{args.Item.Id}");
     }
 }
