--- a/src/BlazorPatient/Shared/NavMenu.razor
+++ b/src/BlazorPatient/Shared/NavMenu.razor
@@ -6,7 +6,7 @@
         </NavLink>
     </li>
     <li class="nav-item px-3">
-        <NavLink class="nav-link" href="patient">
+        <NavLink class="nav-link" href="Patients">
             <span class="oi fas fa-hospital-user" aria-hidden="true"></span> Patients
         </NavLink>
     </li>
