--- a/src/BlazorPatient/Pages/MudNotes.razor
+++ b/src/BlazorPatient/Pages/MudNotes.razor
@@ -5,7 +5,33 @@
 @inject ISnackbar SnackBar
 @inject NavigationManager NavigationManager
 
-@if (_notes.Count is 0)
+<MudCard Elevation="25">
+    <MudCardHeader>
+        <CardHeaderContent>
+            <MudText Variant="Variant.Text" Typo="Typo.h5" Color="Color.Primary">@_patient.GivenName @_patient.FamilyName</MudText>
+        </CardHeaderContent>
+    </MudCardHeader>
+    <MudCardContent>
+        <MudText Variant="Variant.Text" Margin="Margin.Normal">Age : <MudText Color="Color.Primary" Inline="true">@_age</MudText></MudText>
+        <MudText Variant="Variant.Text" Margin="Margin.Normal">Date of Birth : <MudText Color="Color.Primary" Inline="true">@_patient.DateOfBirth </MudText></MudText>
+        <MudText Variant="Variant.Text" Margin="Margin.Normal">Gender : <MudText Color="Color.Primary" Inline="true">@_patient.Gender</MudText></MudText>
+        <MudText Variant="Variant.Text" Margin="Margin.Normal">Home Address : <MudText Color="Color.Primary" Inline="true">@_patient.HomeAddress</MudText></MudText>
+        <MudText Variant="Variant.Text" Margin="Margin.Normal">Phone Number : <MudText Color="Color.Primary" Inline="true">@_patient.PhoneNumber</MudText></MudText>
+    </MudCardContent>
+</MudCard>
+<br />
+@if (_notes is null)
+{
+    <MudCard Elevation="25">
+        <MudCardHeader>
+            <CardHeaderContent>
+                <MudProgressCircular Color="Color.Primary" Size="Size.Medium" Indeterminate="true" />
+                <MudText Variant="Variant.Text" Typo="Typo.h6">Loading ...</MudText>
+            </CardHeaderContent>
+        </MudCardHeader>
+    </MudCard>
+}
+else if (_notes.Count is 0)
 {
     <MudCard Elevation="25">
         <MudCardHeader>
@@ -21,26 +47,25 @@ else
         <ToolBarContent>
             <MudText Typo="Typo.h6">Note</MudText>
             <MudToolBarSpacer />
-            <MudTextField @bind-Value="searchString"
+            <MudTextField @bind-Value="_searchString"
                           Adornment="Adornment.Start"
                           AdornmentIcon="@Icons.Material.Filled.Search"
-                          IconSize="Size.Medium" Class="mt-0">
-                Placeholder="Search for notes..."
+                          IconSize="Size.Medium" Class="mt-0"
+                          Placeholder="Search for notes...">
             </MudTextField>
         </ToolBarContent>
         <HeaderContent>
-            <MudTh>Id</MudTh>
-            <MudTh>PatientId</MudTh>
+            <MudTh>Date</MudTh>
             <MudTh>Message</MudTh>
-            <MudTh>Created Time</MudTh>
+            <MudTh>Actions</MudTh>
         </HeaderContent>
         <RowTemplate>
-            <MudTd DataLabel="Id">@context.Id</MudTd>
-            <MudTd DataLabel="PatientId">@context.PatientId</MudTd>
-            <MudTd DataLabel="Message">@context.Message</MudTd>
             <MudTd DataLabel="CreatedTime">@context.CreatedTime</MudTd>
-            <MudTd DataLabel="">
-                <MudFab @onclick="@(()=>EditNote(@context.Id))" Color="Color.Primary" Icon="@Icons.Material.Filled.Edit" Size="Size.Small" IconSize="Size.Small" />
+            <MudTd DataLabel="Message">@context.Message</MudTd>
+            <MudTd>
+                <MudTooltip Text="Edit">
+                    <MudFab @onclick="@(()=>EditNote(@context.Id))" Color="Color.Primary" Icon="@Icons.Material.Filled.Edit" Size="Size.Small" IconSize="Size.Small" />
+                </MudTooltip>
             </MudTd>
         </RowTemplate>
     </MudTable>
@@ -49,11 +74,11 @@ else
 <MudCard Elevation="25">
     <MudCardHeader>
         <CardHeaderContent>
-            <MudText Typo="Typo.h6">Add / Edit Note</MudText>
+            <MudText Typo="Typo.h6">@_cardHeaderString</MudText>
         </CardHeaderContent>
     </MudCardHeader>
     <MudCardContent>
-        <MudTextField @bind-Value="_note.Message" Label="Message" Margin="Margin.Normal" Variant="Variant.Text" Lines="5" />
+        <MudTextField @bind-Value="_note.Message" Label="Message" Margin="Margin.Normal" Variant="Variant.Text" Lines="10" />
         <br />
         <MudButton Color="Color.Info" OnClick="SaveNote" Variant="Variant.Filled">Save Note</MudButton>
     </MudCardContent>
@@ -63,40 +88,39 @@ else
     [Parameter]
     public int PatientId { get; set; }
 
+    private List<NoteDto> _notes;
     private NoteDto _note = new();
-    private List<NoteDto> _notes = new();
     private List<PatientDto> _patients = new();
-    private string searchString = "";
+    private PatientDto _patient = new();
+    private string _searchString = "";
+    private string _cardHeaderString = "Add a note :";
+    private int _age = 0;
 
     protected override async Task OnInitializedAsync()
     {
-        _notes = await NoteService.Get();
         _patients = await PatientService.Get();
         if (_patients.All(x => x.Id != PatientId))
         {
             SnackBar.Add($"Patient n° {PatientId} not found.", Severity.Error);
             NavigationManager.NavigateTo("/Patients");
         }
-    }
 
+        _notes = await NoteService.GetByPatientId(PatientId);
+        _patient = _patients.Find(x => x.Id == PatientId);
+        _age = GetAge();
+    }
 
     private bool SearchNote(NoteDto noteDto)
     {
-        if (string.IsNullOrWhiteSpace(searchString)) return true;
-        return noteDto.Id.Contains(searchString, StringComparison.OrdinalIgnoreCase)
-               || noteDto.PatientId.Equals(int.Parse(searchString))
-               || noteDto.Message.Contains(searchString, StringComparison.OrdinalIgnoreCase);
+        if (string.IsNullOrWhiteSpace(_searchString)) return true;
+        return noteDto.Id.Contains(_searchString, StringComparison.OrdinalIgnoreCase)
+               || noteDto.PatientId.Equals(int.Parse(_searchString))
+               || noteDto.Message.Contains(_searchString, StringComparison.OrdinalIgnoreCase);
     }
-
-
-    private async Task GetNotes()
-    {
-        _notes = await NoteService.Get();
-    }
-
 
     private async Task SaveNote()
     {
+        _cardHeaderString = "Add a note :";
         _note.PatientId = PatientId;
         int result = await NoteService.Save(_note);
         var cacheNote = _note;
@@ -105,6 +129,7 @@ else
         {
             case 0:
                 SnackBar.Add("Something went wrong.", Severity.Error);
+                SnackBar.Add(NoteService.ErrorMessage);
                 _note = cacheNote;
                 break;
             case 1:
@@ -113,13 +138,35 @@ else
             case 2:
                 SnackBar.Add("Note Updated.", Severity.Success);
                 break;
+            default:
+                SnackBar.Add("Something went wrong.", Severity.Error);
+                break;
         }
-        await GetNotes();
+        _notes = await NoteService.GetByPatientId(PatientId);
     }
 
 
     private void EditNote(string id)
     {
+        _cardHeaderString = "Edit a note :";
         _note = _notes.FirstOrDefault(p => p.Id == id);
+    }
+
+    private int GetAge()
+    {
+        if (_patient.DateOfBirth == null)
+        {
+            return 0;
+        }
+
+        var today = DateTime.Today;
+        int age = today.Year - _patient.DateOfBirth.Value.Year;
+
+        // Go back to the year in which the person was born in case of a leap year
+        if (_patient.DateOfBirth.Value.Date > today.AddYears(-age))
+        {
+            age--;
+        }
+        return age;
     }
 }
