--- a/src/BlazorPatient/Pages/MudNotes.razor
+++ b/src/BlazorPatient/Pages/MudNotes.razor
@@ -1,14 +1,18 @@
 ﻿@page "/Patients/{PatientId:int}"
-@using BlazorPatient.DTO
+@using BlazorPatient.Models
 @inject Infrastructure.Services.INoteService NoteService
 @inject Infrastructure.Services.IPatientService PatientService
+@inject Infrastructure.Services.IAssessmentService AssessmentService
 @inject ISnackbar SnackBar
 @inject NavigationManager NavigationManager
 
 <MudCard Elevation="25">
     <MudCardHeader>
         <CardHeaderContent>
-            <MudText Variant="Variant.Text" Typo="Typo.h5" Color="Color.Primary">@_patient.GivenName @_patient.FamilyName</MudText>
+            <MudText Variant="Variant.Text" Typo="Typo.h5" Color="Color.Primary">
+                @_patient.GivenName @_patient.FamilyName
+                <MudChip Icon="@_riskLevelIcon" Color="@_riskLevelColor" Variant="Variant.Filled">@_riskLevel</MudChip>
+            </MudText>
         </CardHeaderContent>
     </MudCardHeader>
     <MudCardContent>
@@ -43,7 +47,7 @@ else if (_notes.Count is 0)
 }
 else
 {
-    <MudTable Elevation="25" Items="_notes" Filter="new Func<NoteDto, bool>(SearchNote)" @bind-note="_note" Dense="true" Hover="true" Striped="true">
+    <MudTable Elevation="25" Items="_notes" Filter="new Func<NoteModel, bool>(SearchNote)" @bind-note="_note" Dense="true" Hover="true" Striped="true">
         <ToolBarContent>
             <MudText Typo="Typo.h6">Note</MudText>
             <MudToolBarSpacer />
@@ -88,13 +92,16 @@ else
     [Parameter]
     public int PatientId { get; set; }
 
-    private List<NoteDto> _notes;
-    private NoteDto _note = new();
-    private List<PatientDto> _patients = new();
-    private PatientDto _patient = new();
+    private List<NoteModel> _notes;
+    private NoteModel _note = new();
+    private List<PatientModel> _patients = new();
+    private PatientModel _patient = new();
     private string _searchString = "";
     private string _cardHeaderString = "Add a note :";
     private int _age = 0;
+    private string _riskLevel;
+    private string _riskLevelIcon;
+    private Color _riskLevelColor;
 
     protected override async Task OnInitializedAsync()
     {
@@ -108,14 +115,35 @@ else
         _notes = await NoteService.GetByPatientId(PatientId);
         _patient = _patients.Find(x => x.Id == PatientId);
         _age = GetAge();
+        var assessment = await AssessmentService.GetByPatientId(PatientId);
+        _riskLevel = assessment.RiskLevel.ToString();
+        switch (assessment.RiskLevel)
+        {
+            case RiskLevel.None:
+                _riskLevelIcon = Icons.Material.Filled.CheckCircle;
+                _riskLevelColor = Color.Tertiary;
+                break;
+            case RiskLevel.Borderline:
+                _riskLevelIcon = Icons.Material.Filled.BrokenImage;
+                _riskLevelColor = Color.Dark;
+                break;
+            case RiskLevel.EarlyOnset:
+                _riskLevelIcon = Icons.Material.Filled.Warning;
+                _riskLevelColor = Color.Warning;
+                break;
+            case RiskLevel.InDanger:
+                _riskLevelIcon = Icons.Material.Filled.Dangerous;
+                _riskLevelColor = Color.Error;
+                break;
+        }
     }
 
-    private bool SearchNote(NoteDto noteDto)
+    private bool SearchNote(NoteModel note)
     {
         if (string.IsNullOrWhiteSpace(_searchString)) return true;
-        return noteDto.Id.Contains(_searchString, StringComparison.OrdinalIgnoreCase)
-               || noteDto.PatientId.Equals(int.Parse(_searchString))
-               || noteDto.Message.Contains(_searchString, StringComparison.OrdinalIgnoreCase);
+        return note.Id.Contains(_searchString, StringComparison.OrdinalIgnoreCase)
+               || note.PatientId.Equals(int.Parse(_searchString))
+               || note.Message.Contains(_searchString, StringComparison.OrdinalIgnoreCase);
     }
 
     private async Task SaveNote()
@@ -124,7 +152,7 @@ else
         _note.PatientId = PatientId;
         int result = await NoteService.Save(_note);
         var cacheNote = _note;
-        _note = new NoteDto();
+        _note = new NoteModel();
         switch (result)
         {
             case 0:
