--- a/src/BlazorPatient/Pages/MudPatient.razor
+++ b/src/BlazorPatient/Pages/MudPatient.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Patients"
 @using BlazorPatient.Models
 @inject Infrastructure.Services.IPatientService PatientService
+@inject Infrastructure.Services.IAssessmentService AssessmentService
 @inject ISnackbar SnackBar
 @inject NavigationManager NavigationManager
 @if (_patients is null)
@@ -38,6 +39,7 @@ else
             </MudTextField>
         </ToolBarContent>
         <HeaderContent>
+            <MudTh>Assessment</MudTh>
             <MudTh>Given Name</MudTh>
             <MudTh>Family Name</MudTh>
             <MudTh>Date Of Birth</MudTh>
@@ -47,9 +49,10 @@ else
             <MudTh>Actions</MudTh>
         </HeaderContent>
         <RowTemplate>
+            <MudTd><MudChip Icon="@GetAssessmentIcon(context)" Color="@GetAssessmentColor(context)" Variant="Variant.Filled">@GetAssessmentText(context)</MudChip></MudTd>
             <MudTd>@context.GivenName</MudTd>
             <MudTd>@context.FamilyName</MudTd>
-            <MudTd>@GetPatientDate(context)</MudTd>
+            <MudTd>@GetPatientDate(context.DateOfBirth)</MudTd>
             <MudTd>@context.Gender</MudTd>
             <MudTd Class="homeAddress">@context.HomeAddress</MudTd>
             <MudTd>@context.PhoneNumber</MudTd>
@@ -94,22 +97,59 @@ else
 @code{
     private string _searchString;
     private string _cardHeaderString = "Add a patient :";
+
     private PatientModel _patient = new();
     private PatientModel _cachePatient = new();
-    private List<PatientModel> _patients = new();
+    private List<PatientModel> _patients;
+    private readonly List<AssessmentModel> _assessments = new();
 
     protected override async Task OnInitializedAsync()
     {
         _patients = await PatientService.Get();
         if (PatientService.ErrorMessage != "")
         {
-            SnackBar.Add(PatientService.ErrorMessage,Severity.Error);
+            SnackBar.Add(PatientService.ErrorMessage, Severity.Error);
+        }
+        foreach (var patientModel in _patients)
+        {
+            var assessment = await AssessmentService.GetByPatientId(patientModel.Id);
+            _assessments.Add(assessment);
         }
     }
 
-    private string GetPatientDate(PatientModel patientDto)
+
+    private string GetAssessmentIcon(PatientModel patientModel)
     {
-        return patientDto.DateOfBirth != null ? patientDto.DateOfBirth.Value.ToShortDateString() : "";
+        var riskLevel = _assessments.Find(p => p.FamilyName == patientModel.FamilyName)?.RiskLevel;
+        return riskLevel switch
+        {
+            RiskLevel.None => Icons.Material.Filled.CheckCircle,
+            RiskLevel.Borderline => Icons.Material.Filled.BrokenImage,
+            RiskLevel.EarlyOnset => Icons.Material.Filled.Warning,
+            RiskLevel.InDanger => Icons.Material.Filled.Dangerous,
+            _ => throw new ArgumentOutOfRangeException()
+        };
+    }
+    private Color GetAssessmentColor(PatientModel patientModel)
+    {
+        var riskLevel = _assessments.Find(p => p.FamilyName == patientModel.FamilyName)?.RiskLevel;
+        return riskLevel switch
+        {
+            RiskLevel.None => Color.Tertiary,
+            RiskLevel.Borderline => Color.Dark,
+            RiskLevel.EarlyOnset => Color.Warning,
+            RiskLevel.InDanger => Color.Error,
+            _ => throw new ArgumentOutOfRangeException()
+        };
+    }
+    private string GetAssessmentText(PatientModel patientModel)
+    {
+        return _assessments.Find(p => p.FamilyName == patientModel.FamilyName)?.RiskLevel.ToString();
+    }
+
+    private static string GetPatientDate(DateTime? dateOfBirth)
+    {
+        return dateOfBirth != null ? dateOfBirth.Value.ToShortDateString() : "";
     }
 
     private bool SearchPatient(PatientModel patientParam)
@@ -119,6 +159,7 @@ else
                || patientParam.FamilyName.Contains(_searchString, StringComparison.OrdinalIgnoreCase)
                || patientParam.PhoneNumber.Contains(_searchString, StringComparison.OrdinalIgnoreCase);
     }
+
     private async Task GetPatients()
     {
         _patients = await PatientService.Get();
@@ -144,7 +185,6 @@ else
         }
         await GetPatients();
     }
-
     private void EditPatient(int id)
     {
         _cardHeaderString = "Edit a patient :";
